# worldcup-ai-video

./: .gitignore  PROJECT_STATUS.md  README.md  config.example.yaml  loop_analysis_report.md  pyproject.toml  schedule.json
assets/template_horizontal.palmier/: project.json
assets/template_vertical.palmier/: media.json  project.json
src/loopwc/: __init__.py  agent.py  benchmark.py  config.py  demo_status.py  llm_client.py  mcp_client.py  orchestrator.py  state.py  text_overlay.py  watcher.py  web_demo.py
src/loopwc/review/: __init__.py
src/loopwc/sources/: __init__.py  txzqzhibo.py
src/loopwc/stages/: __init__.py  discover.py  download.py  edit.py  export.py  link.py  scrape.py  script.py  tts.py
