[project]
name = "loopwc"
version = "0.1.0"
description = "世界杯每日战况 AI 锐评视频自动化流水线（standalone loop）"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "yt-dlp>=2024.0",
    "apscheduler>=3.10",
    "anthropic>=0.40",
    "claude-agent-sdk>=0.1",
]

[project.scripts]
loopwc = "loopwc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loopwc"]
